RESOLVED FIXED189783
[Web Animations] Accelerated animations don't get suspended
https://bugs.webkit.org/show_bug.cgi?id=189783
Summary [Web Animations] Accelerated animations don't get suspended
Antoine Quint
Reported 2018-09-20 05:01:12 PDT
Attachments
Patch (7.34 KB, patch)
2018-09-20 05:08 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews107 for mac-sierra-wk2 (2.91 MB, application/zip)
2018-09-20 06:24 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews200 for win-future (12.90 MB, application/zip)
2018-09-20 06:45 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.28 MB, application/zip)
2018-09-20 06:55 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2018-09-20 05:08:09 PDT
EWS Watchlist
Comment 2 2018-09-20 06:24:43 PDT
Comment on attachment 350187 [details] Patch Attachment 350187 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/9280433 New failing tests: animations/suspend-resume-animation-events.html
EWS Watchlist
Comment 3 2018-09-20 06:24:44 PDT
Created attachment 350191 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4 2018-09-20 06:44:57 PDT
Comment on attachment 350187 [details] Patch Attachment 350187 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/9280510 New failing tests: webanimations/accelerated-animation-suspension.html
EWS Watchlist
Comment 5 2018-09-20 06:45:08 PDT
Created attachment 350194 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
EWS Watchlist
Comment 6 2018-09-20 06:55:01 PDT
Comment on attachment 350187 [details] Patch Attachment 350187 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/9280463 New failing tests: animations/suspend-resume-animation-events.html
EWS Watchlist
Comment 7 2018-09-20 06:55:02 PDT
Created attachment 350196 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Dean Jackson
Comment 8 2018-09-20 09:14:09 PDT
Comment on attachment 350187 [details] Patch other tests seem to be failing now though
Antoine Quint
Comment 9 2018-09-21 06:02:17 PDT
The test that regressed was actually marked as flaky in webkit.org/b/189607 and I have a separate patch up for review for this specific issue.
Antoine Quint
Comment 10 2018-09-21 06:09:54 PDT
Antoine Quint
Comment 11 2018-09-21 06:14:34 PDT
Note You need to log in before you can comment on or make changes to this bug.